--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,43 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.prima{
+    display: flex;
+    justify-content: space-between;
+    padding: 2%;
+    padding-left: 18%;
+}
+.dispo{
+    background-color: rgb(17, 102, 63);
+    padding: 5px;
+    padding-left: 7px;
+    padding-right: 7px;
+    border-radius: 20px;
+    margin-right: 75%;
+    font-size: 12px;
+    color: white;
+}
+.nond{
+    background-color: rgb(241, 78, 78);
+    padding: 5px;
+    padding-left: 7px;
+    padding-right: 7px;
+    border-radius: 20px;
+    margin-right: 75%;
+    font-size: 12px;
+    color: white;
+}
+.inp{
+    background-color: rgb(208, 241, 78);
+    padding: 5px;
+    padding-left: 7px;
+    padding-right: 7px;
+    border-radius: 20px;
+    margin-right: 75%;
+    font-size: 12px;
+    color: white;
+}
+.bottoni{
+padding-right: 50%;    
+}
