--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
     padding-left: 7px;
     padding-right: 7px;
     border-radius: 20px;
-    margin-right: 75%;
+    margin-right: 72%;
     font-size: 12px;
     color: white;
 }
@@ -26,7 +26,7 @@
     padding-left: 7px;
     padding-right: 7px;
     border-radius: 20px;
-    margin-right: 75%;
+    margin-right: 72%;
     font-size: 12px;
     color: white;
 }
@@ -36,10 +36,16 @@
     padding-left: 7px;
     padding-right: 7px;
     border-radius: 20px;
-    margin-right: 75%;
+    margin-right: 72%;
     font-size: 12px;
     color: white;
 }
 .bottoni{
-padding-right: 50%;    
+padding: 0px;    
+}
+.tabella{
+    width: 65%;
+}
+.col-w{
+    color: white;
 }
